--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,17 +1,34 @@
 <% include partials/header %>
+    
 
-<h1>Campgrounds</h1>
+<div class="container">
+<header class="jumbotron">
+    <div class="container">
+        <h1>Campgrounds</h1>
+        <p>We feature campgrounds all over the globe!</p>
+        <p>
+            <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add a new campground</a>        
+        </p>
+    </div>    
+</header>
 
-<% campgrounds.forEach(function(campground){ %>
-    <div>
-        <h4><%= campground["name"] %></h4>
-        <img src="<%= campground.image%>">
-    </div>
 
-<% }); %>
+<div class="row" style="display: flex; flex-wrap: wrap;">
+    <% campgrounds.forEach(function(campground){ %>
+        <div class="col-md-3 col-sm-6">
+            <div class="img-thumbnail">   
+                <img src="<%= campground.image%>">
+                <div class="caption text-center">
+                    <h4><%= campground["name"] %></h4>
+                </div>
+            </div>
+             
+        </div>
 
-<h4>Can't find a campground? ... <a href="/campgrounds/new">ADD IT!</a></h4>
+    <% }); %>
+</div>
 
+</div>
 
 
 <% include partials/footer %>
