--- a/views/newcampground.ejs
+++ b/views/newcampground.ejs
@@ -1,12 +1,15 @@
 <% include partials/header %>
-
-<h3>Create a new campground</h3>
-
-<form action="/campgrounds" method="POST"> 
-    <input type="text" name="name" placeholder="name">
-    <input type="text" name="image" placeholder="image url">
-    <input type="submit">
-</form>
-
+<div class="container">
+    <div class="row">
+        <h3 style="text-align: center;">Create a new campground</h3>
+        <div style="width: 30%; margin: 0 auto;">
+            <form action="/campgrounds" method="POST"> 
+                <input classs="form-control" type="text" name="name" placeholder="name">
+                <input classs="form-control" type="text" name="image" placeholder="image url">
+                <input class="btn btn-lg btn-primary btn-block" type="submit">
+            </form>
+        </div>
+    </div>
+</div>
 
 <% include partials/footer %>
