--- a/views/newcampground.ejs
+++ b/views/newcampground.ejs
@@ -6,6 +6,7 @@
             <form action="/campgrounds" method="POST"> 
                 <input classs="form-control" type="text" name="name" placeholder="name">
                 <input classs="form-control" type="text" name="image" placeholder="image url">
+                <input classs="form-control" type="text" name="desc" placeholder="description">
                 <input class="btn btn-lg btn-primary btn-block" type="submit">
             </form>
         </div>
