Added comment functionality and major file structure changes.

--- a/views/campgrounds/notfound.ejs
+++ b/views/campgrounds/notfound.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <div class="container-fluid p-4">
     <h2 class="text-danger" style="text-align: center;">Campground not found..</h2>
@@ -6,4 +6,4 @@
 
 
 
-<% include partials/footer %>
+<% include ../partials/footer %>
