--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 <div class="container">
     <div class="row">
         <h3 style="text-align: center;">Create a new campground</h3>
@@ -13,4 +13,4 @@
     </div>
 </div>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
