--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-    <div class="border-top border-secondary" style="text-align: center;">
+    <div class="border-top border-secondary" style="text-align: center; bottom: 0; position: fixed; width: 100%;">
         <p>YelpCamp - Andrew Juarez 2018</p>
     </div>
 
