--- a/views/campgrounds/found.ejs
+++ b/views/campgrounds/found.ejs
@@ -1,20 +1,47 @@
 <% include ../partials/header %>
 
 <div class="container-fluid">
-    <h1><%= campground["name"] %></h1>
+    <div class="row">
+        <div class="col-md-3">
+            <p class="lead">Yelp Camp</p>
+            <div class="list-group">
+                <li class="list-group-item active">Info1</li>
+                <li class="list-group-item">Info2</li>
+                <li class="list-group-item">Info3</li>
+            </div>
+            Insert MAP
+        </div>
+        <div class="col-md-9">
+            <div class="thumbnail">
+                    <img class="img-fluid" src="<%= campground.image%>">
+                    <div class="caption">
+                        <h4 class="float-right">$9.00/night</h4>
+                        <h4><%= campground["name"] %></h4>
+                        <p><%= campground.desc %></p>
+                    </div>
+            </div>
+            <div class="card" style="background-color: #D7D8D6; padding: 15px;">
+                <div class="text-right">
+                        <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add comment</a>
+                </div>
 
-    <img src="<%= campground.image%>">
+                <hr>
 
-    <p><%= campground.desc %></p>
+                <% campground.comments.forEach(function(comment){ %>
+                    <div class="row">
+                        <div class="col-md-12">
+                                <strong><%= comment.author %></strong>
+                                <span class="float-right">10 days ago</span>
+                                <p><%= comment.text %></p>
+                        </div>
+                    </div>
+                    
+                <% }); %>
+            </div>
 
-    <p>
-        <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add comment</a>
-    </p>
-
-    <% campground.comments.forEach(function(comment){ %>
-        <p><%= comment.text %></p>
-        <h5>- <%= comment.author %></h5>
-    <% }); %>
+        </div>
+    </div>
 </div>
+    
 
 <% include ../partials/footer %>
