Data associations for campgrounds and comments

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -7,6 +7,8 @@
                 <input classs="form-control" type="text" name="name" placeholder="name">
                 <input classs="form-control" type="text" name="image" placeholder="image url">
                 <input classs="form-control" type="text" name="desc" placeholder="description">
+                <input classs="form-control" type="number" name="rate" min="0" placeholder="daily rate">
+                <input class="btn btn-lg btn-primary btn-block" type="submit">
                 <input class="btn btn-lg btn-primary btn-block" type="submit">
             </form>
         </div>
