--- a/views/campgrounds/found.ejs
+++ b/views/campgrounds/found.ejs
@@ -15,9 +15,10 @@
             <div class="thumbnail">
                     <img class="img-fluid" src="<%= campground.image%>">
                     <div class="caption">
-                        <h4 class="float-right">$9.00/night</h4>
+                        <h4 class="float-right">$<%= campground.rate %>/night</h4>
                         <h4><%= campground["name"] %></h4>
                         <p><%= campground.desc %></p>
+                        <p><em>Submitted By <%= campground.author.username %></em></p>
                     </div>
             </div>
             <div class="card" style="background-color: #D7D8D6; padding: 15px;">
@@ -30,7 +31,7 @@
                 <% campground.comments.forEach(function(comment){ %>
                     <div class="row">
                         <div class="col-md-12">
-                                <strong><%= comment.author %></strong>
+                                <strong><%= comment.author.username %></strong>
                                 <span class="float-right">10 days ago</span>
                                 <p><%= comment.text %></p>
                         </div>
