--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,12 +1,16 @@
 <% include partials/header %>
 
-<h2>Sign up!</h2>
-
-<form action="/register" method="POST">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <button>Sign Up</button>
-
-</form>
+<div class="container">
+    <div class="row">
+        <h3 style="text-align: center;">Sign Up</h3>
+        <div style="width: 30%; margin: 0 auto;">
+            <form action="/register" method="POST">
+                <input class="form-control" type="text" name="username" placeholder="username">
+                <input class="form-control" type="password" name="password" placeholder="password">
+                <button>Sign Up</button>
+            </form>
+        </div>
+    </div>
+</div>
 
 <% include partials/footer %>
