Fixed footer to bottom of page.

--- a/views/campgrounds/campgrounds.ejs
+++ b/views/campgrounds/campgrounds.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header %>
-    
+<link rel="stylesheet" href="/stylesheets/campgrounds.css">
 
 <div class="container">
 <header class="jumbotron">
