--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav id="main-nav-bar" class="navbar navbar-expand-sm navbar-light bg-light">
         <a class="navbar-brand" href="/">YelpCamp</a>
         
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -30,3 +30,7 @@
           </ul>
         </div>
       </nav>
+
+
+      <div id="main-container">
+        <div id="main">
