--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+}
+
 .thumbnail img {
     width: 100%;
 }
@@ -10,10 +14,28 @@
     padding: 9px;
 }
 
-.footer {
-    
+#main-nav-bar {
+    height:6%;
+}
+
+#main-container {
+    min-height: 94%
+}
+
+#main {
+    overflow: auto;
+    padding-bottom: 25px;
+}
+
+#footer {
     text-align: center; 
-    bottom: 0;
-    
+    position: relative;
+    height: 25px;
     width: 100%;
+    margin-top: -25px;
+    clear: both;
+}
+
+#footer p {
+    margin-bottom: 0;
 }
