--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,7 @@
-    <div class="border-top border-secondary footer bg-light">
+        </div>
+    </div>
+    
+    <div id="footer" class="border-top border-secondary bg-light">
         <p>YelpCamp - Andrew Juarez 2018</p>
     </div>
 
