--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -4,7 +4,7 @@
         <h3 style="text-align: center;">Add a comment to <%= campground.name %></h3>
         <div style="width: 30%; margin: 25px auto;">
             <form action="/campgrounds/<%= campground._id %>/comments" method="POST"> 
-                <input classs="form-control" type="text" name="comment[text]" placeholder="text">
+                <input classs="form-control" type="text" name="comment[text]" placeholder="text" autofocus="autofocus">
                 <input class="btn btn-lg btn-primary btn-block" type="submit">
             </form>
         </div>
