--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,4 +6,6 @@
     <input  type="submit" value="Login">
 </form>
 
+<p>Don't have an account? <a href="/register">Register</a></p>
+
 <% include partials/footer %>
