--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,6 +31,15 @@
         </div>
       </nav>
 
+      <div class="container">
+        <% if(error && error.length > 0) { %>
+        <div class="alert alert-danger"><%= error %></div>
+        <% }  %>
+        <% if(success && success.length > 0) { %>
+        <div class="alert alert-success"><%= success %></div>
+        <% } %>
+      </div>
+      
 
       <div id="main-container">
         <div id="main">
