--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,9 +1,50 @@
-<% include partials/header %>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>YelpCamp</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    
+    <link rel="stylesheet" href="/stylesheets/landing.css">
+</head>
+<body>
 
-<div class="container-fluid">
-    <h1 class="m-2">Welcome to YelpCamp!</h1>
-    <a href="/campgrounds">View campgrounds</a>
-</div>
+
+    <a class="btn btn-info" id="login-btn" href="/login">Login</a>
+ 
+
+    <div class="container">
+        <% if(error && error.length > 0) { %>
+        <div class="alert alert-danger"><%= error %></div>
+        <% }  %>
+        <% if(success && success.length > 0) { %>
+        <div class="alert alert-success"><%= success %></div>
+        <% } %>
+    </div>
+      
 
 
-<% include partials/footer %>
+
+    <div id="landing-header">
+            <h1>Welcome to YelpCamp!</h1>
+           <a href="/campgrounds" class="btn btn-lg btn-success">View All Campgrounds</a>
+       </div>
+       
+
+<ul class="slideshow">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+
+
+<!-- <div id="footer" class="border-top border-secondary bg-light">
+    <p>YelpCamp - Andrew Juarez 2018</p>
+</div> -->
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</body>
+</html>
